some corrections in css

--- a/public/css/allProducts.css
+++ b/public/css/allProducts.css
@@ -1,8 +1,16 @@
 .filterDropdown{
-    font-family: 'Michroma', sans-serif; font-size: large; 
+    font-family: 'Michroma', sans-serif; font-size: large;
 }
 .filterDropdownUl{
-    box-shadow: 4px 4px 8px rgba(255, 255, 255, 0.913);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.609);
+    white-space: nowrap;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: #050505e4;
+    border-radius: 20px;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .filterDropDownButton{
