--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -6,14 +6,18 @@
 <div class="containerfluid d-flex mainContainer"> 
     <div class="sideForm">
         <form action="/admin/adminLogin" method="POST" class="pt-1 mainForm needs-validation" style="height: 350px;">
-            <div class="text-center mb-3 mt-3 welcome" style="font-size: 30px;">Welcome Admin !</div>
-            <div class="form-group mb-3">
-                <input type="email" class="form-control" placeholder="email" name="email" value="<%= locals?.email?email:''%>"  required>
+            <div class="text-center mb-3 mt-3 mainFontFamily" style="font-size: 30px;">Log In</div>
+            <label for="basic-url" class="form-label mb-1 mt-2" style="align-self: flex-start; font-weight: 500;">Email</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text"><i class="fa-solid fa-at"></i></span>
+                <input type="email" class="form-control" placeholder="Enter your email." name="email" value="<%= locals?.email?email:''%>"  required>
             </div> 
-            <div class="form-group mb-3">
-                <input type="password" class="form-control" placeholder="password" name="password" required>
+            <label for="basic-url" class="form-label mb-1 mt-2" style="align-self: flex-start; font-weight: 500;">Password</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text"><i class="fa-solid fa-key"></i></span>
+                <input type="password" class="form-control" placeholder="Enter your password." name="password" required>
             </div> 
-            <button type="submit" class="btn rounded-pill btn-dark mt-2">Sign-In</button>
+            <button type="submit" class="btn btn-dark mt-2">Sign-In</button>
         </form> 
     </div>
     <div class="alertKey">
