--- a/views/admin/productDetailed.ejs
+++ b/views/admin/productDetailed.ejs
@@ -35,7 +35,7 @@
     <%- include('../layout/adminHeader')-%>
     <div class="container mb-3" style="margin-top: 20px;">
         <div class="row" style="display: flex; justify-content: center;">
-            <div class="col-10 pt-3 pb-2 ps-4 pe-2 " style="border: 1px solid rgb(75, 75, 75); background-color: #dfcfe9; border-radius: 20px; box-shadow: 0px 0px 3px rgb(132, 0, 255);" >
+            <div class="col-10 pt-3 pb-2 ps-4 pe-2 " style="border: 1px solid rgb(163, 163, 163); background-color: #f2f2f2; border-radius: 20px; box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.46)" >
                 <h3 class="card-title mb-2 mt-2 text-center" style=" font-family: 'Michroma', sans-serif;"><u><%= product?.name%></u></h3>
                 
                 <div class="d-flex align-item-center mt-2">
