--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -93,12 +93,12 @@
                         <span class="w-100 ms-3 text-start">User's</span>
                       </a>
                     </div>
-                    <div>
+                    <!-- <div>
                       <a type="button" href="/admin/home" class="openButton btn py-2 btn-dark d-flex align-items-center" style="text-decoration: none;">
                           <i class="fa-solid fa-shoe-prints me-2 ms-2 " style="font-size: 30px;"></i>
                           <span class="w-100 ms-3 text-start">All Product's</span>
                       </a>
-                  </div>
+                  </div> -->
                     <div>
                       <a type="button" href="/admin/productList" class="openButton btn py-2 btn-dark d-flex align-items-center" style="text-decoration: none;">
                         <i class="fa-solid fa-bars-staggered me-2 ms-2 " style="font-size: 30px;"></i>
