--- a/views/user/userRegister.ejs
+++ b/views/user/userRegister.ejs
@@ -37,7 +37,8 @@
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" id="validationPassword" aria-describedby="inputGroupPrepend" name="password"  required>
-            <span class="btn rounded-pill" onclick="togglePassword()" id="passKey" style="font-size: 20px;"><i class="bi bi-eye-slash-fill"></i></span>
+            <span class="input-group-text" onclick="togglePassword()" id="passKey" style="font-size: 20px; border-top-right-radius: 6px; border-bottom-right-radius: 6px;"><i class="bi bi-eye-slash-fill"></i>
+            </span>
             <span class="error-span">&nbsp;</span>
             <div class="invalid-feedback">
               Enter A Valid Password !
