--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -1,64 +1,76 @@
-.mainCont{
-    margin-top: 10px;
-    max-width: 600px;
+.mainCont {
+    margin-top: 30px;
     color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 10px;
+    justify-content: center; /* This might not be necessary */
     align-items: center;
-    border: 1px solid black;
-    background: linear-gradient(to right, #46506fa4, #657f8883);
-    border-radius: 10px;
-    min-width: 430px;
-    max-width: 600px;
+    border: 1px solid rgb(172, 172, 172);
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.428);
+    background-color: rgb(247, 243, 243);
+    border-radius: 30px;
+    width: 100%;
+
 }
 
-.submitButton{
+.submitButton {
     margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.inputField{
-    border: 1px solid rgb(254, 254, 254);
-    border-radius: 50px;
-    height: 40px;
-    padding-right: 20px;
-    padding-left: 20px;
-    min-width: 400px;
-    max-width: 500px;
+
+
+.mainCont select,
+.mainCont textarea {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    box-sizing: border-box; 
 }
-.inputFieldImage{
-    background-color: white;
-    color: black;
-    border: 1px solid rgb(255, 255, 255);
-    padding: 5px 0px 5px 5px;
-    border-radius: 10px;
-    width: 220px;
+.input-group-text {
+    width: 120px;
+    height: 60px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(110, 110, 137);
+    border: 2px solid rgb(125, 125, 125);
 }
 
-label{
+.inputField {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border-radius: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-sizing: border-box; 
+}
+
+.inputFieldImage {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    padding: 5px 0px 5px 5px;
+    border-radius: 10px;
+}
+
+label {
     font-weight: 500;
 }
 
-.mainCont select{
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 50px;
-    padding-right: 20px;
-    padding-left: 20px;
-    min-width: 300px;
-    max-width: 500px;
-}
-.mainCont textarea{
-    border: 1px solid rgb(255, 255, 255);
+.mainCont select,
+.mainCont  {
     border-radius: 10px;
     padding-right: 20px;
     padding-left: 20px;
-    min-width: 300px;
-    max-width: 500px;
 }
-.mainCont button{
-    width: 200px;
+
+.mainCont button {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    border: none !important;
+    background-color: rgb(0, 0, 0) !important;
 }
 
 input::-webkit-outer-spin-button,
@@ -67,9 +79,31 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-.backButton{
+.backButton {
     position: fixed;
     top: 10px;
     right: 20px;
+}
 
+.needs-validation{
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-control{
+    width: 50vw;
+}
+.form-control textarea{
+    width: 100%;
+}
+
+.inputField,
+.inputSelect{
+    border: 1px solid rgb(151, 151, 151) ;
+}
+.input-group,
+.form-control{
+    width: 100%;
+    min-width: 50vw;
 }
