--- a/public/css/adminHome.css
+++ b/public/css/adminHome.css
@@ -21,27 +21,43 @@
     width: 100%;
     max-width: 300px;
 }
-.adminContainer{
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-}
 .adminCenter{
-    min-width: 300px;
+    background-color: rgba(0, 0, 0, 0.926);
+    border-radius: 30px;
+    box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.461);
     display: flex;
-    flex-direction: column;
+    font-weight: 700px;
+    font-family: 'Michroma', sans-serif;
+    font-size: 20px !important;
     align-items: center;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    flex-direction: row;
     justify-content: space-around;
     padding: 20px;
 }
 
-.adminCenter button{
-    padding: 20px 0px;
+.g-5.adminCenter button {
+    padding: 20px 30px !important;
+}
+.g-5.adminCenter a {
+    padding: 20px 30px !important;
+}
+
+
+.adminCenter div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
     text-wrap: nowrap;
     font-size: 20px;
-    max-width: 300px;
-    width: 100%;
+    height: 100px;
+}
+@media (max-width: 600px) {
+    .adminCenter div {
+        width: 100%;
+    }
 }
 .adminRight{
     min-width: 180px;
