--- a/public/css/card.css
+++ b/public/css/card.css
@@ -8,7 +8,7 @@
     border: 2px solid #c3c6ce;
     transition: 0.5s ease-out;
     overflow: visible;
-    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.179);
    }
    
    .card-details {
@@ -35,12 +35,22 @@
    }
    
    /*Hover*/
-   .card:hover {
-    border-color: #9000ff;
-    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
-   }
-   
+   .card:hover .productImageMain {
+     transform: scale(1.08);
+
+    }
+    .productImageMain{
+        border-radius: 30px !important;
+        transition: transform 0.3s ease-in-out; 
+    }
+    .card:hover {
+        border-color: #9000ff;
+        box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+    }
+
    .card:hover .card-button {
     transform: translate(-50%, 50%);
     opacity: 1;
    }
+
+ 
