--- a/public/css/chatBot.css
+++ b/public/css/chatBot.css
@@ -21,7 +21,6 @@ margin: 0;
 .messageLeft {
   background-color: #000000;
   color: white;
-  border: 1px solid rgb(248, 248, 248);
   border-bottom-left-radius: 0 !important;
 }
 
@@ -44,6 +43,7 @@ margin: 0;
     height: 90vh;
     width: 100% !important;
     transition: .3s;
+    background-color: #FFF2D8;
 }
 .mainCont:hover{
   box-shadow: 0px 0px 40px #414040b5;
@@ -77,6 +77,7 @@ margin: 0;
 }
 .messageCont{
     margin-top: 60px;
+    background-color: #FFF2D8;
     /* background-image: url('../images/administrator-working-on-computer.png');
     background-size: cover; 
     background-position: center;
@@ -84,7 +85,6 @@ margin: 0;
     height: fit-content;
     display: flex;
     flex-direction: column;
-    
     height: 90%;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -99,7 +99,7 @@ margin: 0;
   }
 
   #messageForm{
-    background-color: rgb(255, 255, 255);
+    background-color: #FFF2D8;
     display: flex;
     justify-content: center;
     align-items: center;
