--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -63,7 +63,10 @@ body {
     }
 }
 
-ul {
+.footer ul {
     margin-left: -30px;
+    list-style-type: none;
+}
+* ul{
     list-style-type: none;
 }
