--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -33,7 +33,14 @@
       margin-bottom: -70px;
     }
   }
-
+  .firstImage:hover {
+    transform: scale(1.05) rotate(1deg);
+    filter: drop-shadow(0px 0px 15px #0000004d);
+  }
+  
+  .firstImage {
+    transition: transform 0.5s ease-in-out, filter 0.5s ease-in-out;
+  }
   
   .imageContainer {
     position: relative;
