--- a/views/admin/adminUserManagement.ejs
+++ b/views/admin/adminUserManagement.ejs
@@ -8,37 +8,32 @@
 
 <div class="container" style="margin-top: 20px; margin-bottom: 200px;"> 
         <div class="container-fluid adminContainer">
-            <div class="row g-5"> 
-                <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
-                  <button class="btn btn-dark rounded">Total Users  : <%=users.length%></button>
-                  <a href="/admin/createUser" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-dark rounded  mt-2">Create User</button></a>
+          <div class="d-flex justify-content-center text-center mt-2"> 
+            <form action="/admin/searchUser" class="needs-validation" method="get" class=" w-50 mt-2 mb-3" enctype="application/form-data">
+              <div class="input-group mt-3">
+                  <span class="input-group-text">
+                    <i class="bi bi-search" style="font-size: 20px;"></i>
+                  </span>
+                  <% if (search) { %>
+                  <input type="text" class="form-control w-50" name="search" value="<%= search%>" placeholder="Search User's">
+                <% } else { %>
+                  <input type="text" class="form-control w-50" name="search" placeholder="Search User's">
+                <% } %>
                 </div>
+                <div class="mb-4">
+                <button class="btn btn-dark text-center rounded-pill" type="submit" style="width: 100px; margin-top: 10px;">Search</button>
+                <a href="/admin/viewUsers" class="btn btn-danger  rounded-pill text-center" style="width: 100px; margin-top: 10px;">Reset</i></a></div>
+            </form>
+          </div>
+            <div class=" g-5 adminCenter" > 
+                <div>
+                  <button class="btn btn-dark rounded">Total Users  : <%=users.length%></button></div>
+                  <div class=""><a href="/admin/createUser" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-dark rounded  mt-2">Create User</button></a></div>
+                
             </div>
         </div>
-
-
-
-        <div class="container mt-5 p-4" style=" border: 1px solid rgb(124, 124, 124); border-radius: 20px; padding: 20px; background-color: rgba(255, 255, 255, 0.635);">
+        <div class="container mt-2 p-4" style="  border-radius: 20px; padding: 20px; background-color: rgba(255, 255, 255, 0.635);">
             <h2 style="font-family: 'Michroma', sans-serif;">Users</h2>
-
-              <div class="d-flex justify-content-center text-center mt-2"> 
-                <form action="/admin/searchUser" class="needs-validation" method="get" class=" w-50 mt-2 mb-3" enctype="application/form-data">
-                  <div class="input-group mt-3">
-                      <span class="input-group-text">
-                        <i class="bi bi-search" style="font-size: 20px;"></i>
-                      </span>
-                      <% if (search) { %>
-                      <input type="text" class="form-control w-50" name="search" value="<%= search%>" placeholder="Search User's">
-                    <% } else { %>
-                      <input type="text" class="form-control w-50" name="search" placeholder="Search User's">
-                    <% } %>
-                    </div>
-                    <div class="mb-4">
-                    <button class="btn btn-dark text-center rounded-pill" type="submit" style="width: 100px; margin-top: 10px;">Search</button>
-                    <a href="/admin/viewUsers" class="btn btn-danger  rounded-pill text-center" style="width: 100px; margin-top: 10px;">Reset</i></a></div>
-                </form>
-              </div>
-              
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-2 d-flex" style="justify-content: center;">
               <% if (users=='') { %>
                 <h2 class="text-center">No Users!</h2>
@@ -46,11 +41,11 @@
               
               <% if (users) { %>
      
-              <% users.forEach(user=>{%>
+              <% users.forEach((user,index)=>{%>
         <a href="/admin/detailedUser?id=<%=user._id%>" style="text-decoration: none; color: rgb(0, 0, 0);">
                 <div class="col w-100" style="    font-family: 'Roboto', sans-serif;">
                   <div class="card " style="padding: 20px; width: 100% !important; height: min-content; overflow-wrap: break-word !important; overflow-wrap: break-word; ">
-                    <i class="fa-solid fa-person-walking-luggage " style="font-size: 30px; margin: 0px; padding: 0px;"></i>
+                    <i class="fa-solid fa-person-walking-luggage " style="font-size: 30px; margin: 0px; padding: 0px;"> <%=index+1%> :</i>
                     <div class="card-body" style="display: flex; justify-content: space-around; gap: 10px; flex-wrap: wrap;">
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= user.name%></span>
                       <span class="card-title d-block" style="overflow-wrap: break-word; word-break: break-all;">
