--- a/views/admin/brandBasedAdmin.ejs
+++ b/views/admin/brandBasedAdmin.ejs
@@ -7,24 +7,7 @@
     <%- include('../layout/adminHeader')-%>
 
         <div class="container" style="margin-top: 50px; margin-bottom: 100px;"> 
-          <div class="container-fluid adminContainer">
-            <div class="row g-5"> 
-                <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
-                    <button class="btn btn-dark rounded">Total Brands : <%=brandsData?.length%></button>
-                    <button class="btn btn-dark rounded mt-2">All Brands</button>
-                </div>
-                <div class="adminRight col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
-                    <a href="/admin/addProduct" style="min-width: 180px;">
-                        <button class="btn btn-dark rounded">Add Item</button>
-                    </a>
-                    <a href="/admin/createCategory" style="min-width: 180px;">
-                        <button class="btn btn-dark rounded mt-2">Categories</button>
-                    </a>
-                </div>
-            </div>
-        </div>
-      <div class="container mt-5  p-4">
-            <h2 style="font-family: 'Michroma', sans-serif;">Products</h2>
+          <h2 style="font-family: 'Michroma', sans-serif;">All Brands</h2>
             
             <div class="d-flex justify-content-center text-center mt-2"> 
               <form action="/admin/searchProduct" method="get" class=" w-50 mt-2 mb-3" enctype="application/form-data">
@@ -42,14 +25,27 @@
                   <a href="/admin/home" class="btn btn-danger  rounded-pill text-center" style="width: 100px; margin-top: 10px;">Reset</i></a>
               </form>
             </div>
-
-           
-
+            <div class="adminCenter g-5"> 
+                <div>
+                    <button class="btn btn-dark rounded">Total Brands : <%=brandsData?.length%></button>
+                  </div>
+                    <div><button class="btn btn-dark rounded mt-2">All Brands</button></div>
+                <div>
+                    <a href="/admin/addProduct" style="min-width: 180px;">
+                        <button class="btn btn-dark rounded">Add Item</button>
+                    </a></div>
+                    <div><a href="/admin/createCategory" style="min-width: 180px;">
+                        <button class="btn btn-dark rounded mt-2">Categories</button>
+                    </a></div>
+            
+        </div>
+      <div class="container mt-2  p-4">
     <% brandsData?.forEach(brand => { %>
                   <div class="col">
-                    <div class=" h-100 mb-3 pb-2">
-                      <h2 class="card-title text-center mt-3 mb-2" style="font-family: 'Michroma', sans-serif;"><%= brand._id %></h2>
-              
+                    <div class="h-100 mb-5 pb-2">
+                      <h3 class="bg-dark d-inline-block rounded text-white text-center mt-3 mb-3 py-2 px-4 pb-3" style="font-family: 'Michroma', sans-serif; ">
+                        <%= brand._id %> : 
+                      </h3>
                       
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
                 
@@ -57,28 +53,32 @@
        
                 <% brand.products.forEach(product=>{%>
      
-                  <div class="col">
-                    <div class="card h-100" style="">
-                    <a href="/admin/productDetailed?id=<%=product._id%>" style="padding-right: 10px; margin: 0px;">
-                      <img src="<%= product.images[0] %>" class="image-fluid" alt="..." style="border-radius: 20px; margin: 5px; max-width: 100%; height: auto; object-fit: contain;">
-                     </a> 
-                      <div class="card-body">
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Name : </span><%= product.name%></span>
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Quantity : </span><%= product.quantity%></span>
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Category : </span><%= product.category?.name%></span>
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Price : </span><%= product.price%></span>
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Sizes : </span><%= product.sizes%></span>
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Brand : </span><%= product.brand%></span>
-                        <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Sales Count : </span><%= product.salesCount||0%></span>
-                        <span class="card-title d-block text-center mt-2"><span style="font-size: 17px; font-weight: 700;"><u>Description</u></span></span>
-                        <p class="card-text ps-2 pe-2 pb-2"><%= product.description%></p>
-                      </div>
-                      <div class="card-footer d-flex" style="justify-content: end; gap: 10px; background-color: #ebebeb00; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
-                          <a href="/admin/editProduct?id=<%=product._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
-                          <a href="/admin/deleteProduct?id=<%=product._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=product.deleted?"Show":"Hide"; %></a>
+                  <div class="card  w-100 p-0 mainFontFamily" > 
+                    <div class="row g-0 align-items-center">
+                        <div class="col-lg-2" >
+                            <a href="/admin/productDetailed?id=<%=product._id%>">
+                              <img src="<%= product.images[0] %>" class="img-fluid " alt="Product Image" style="border-radius: 30px; margin-left: 2px;">
+                            </a>
                         </div>
-                      </div>
+                        <div class="col-lg-10 px-2" style="display: flex; flex-direction: column;">
+                            <div class="card-body">
+                                <h5 class="card-title"><%= product.name %></h5>
+                                <span class="card-text d-block"><span style="font-weight: 700;">Quantity:</span> <%= product.quantity %></span>
+                                <span class="card-text d-block"><span style="font-weight: 700;">Category:</span> <%= product.category ? product.category.name : 'N/A' %></span>
+                                <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Brand : </span><%= product.brand%></span>
+                                <p class="card-text"><span style="font-weight: 700;">Price:</span> <%= product.price %><%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                                  || <b>
+                                    Discount
+                                  </b> : <%=product.discountPercentage||0%> %
+                                <%}%></p>
+                            </div>
+                            <div class="d-flex justify-content-end mt-auto pb-2" style="gap: 10px;">
+                                <a href="/admin/editProduct?id=<%= product._id %>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
+                                <a href="/admin/deleteProduct?id=<%= product._id %>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()"><%= product.deleted ? "Show" : "Hide"; %></a>
+                            </div>
+                        </div>
                     </div>
+                </div>
                     <%})%>
                 <% } else { %>
                   <h2 class="text-center">No Such Products</h2>
