--- a/views/admin/detailedUser.ejs
+++ b/views/admin/detailedUser.ejs
@@ -12,10 +12,11 @@
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
                 <div class="col-12 w-100">
                   <div class="ms-2 d-flex justify-content-start">
-                    <h5 class="text-center d-inline-block" style=" border: 1px solid rgb(209, 209, 209); border-radius: 15px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.229); padding: 5px 20px 10px 20px; font-family: 'Michroma', sans-serif; margin-bottom: 10px; font-weight: 700; text-transform: capitalize;">Name : <span style="font-weight: 400;"><%= user.name%></span></h5>
+                    
                   </div>
                     <div class="card " style="padding: 20px; width: 100% !important; height: min-content; overflow-wrap: break-word !important; overflow-wrap: break-word; ">
-                        <i class="fa-regular fa-circle-user" style=" font-size: 30px; margin: 0px; padding: 0px;"></i>
+                        <div  style=" font-size: 30px; margin: 0px; padding: 0px;">
+                          <h5 class="text-center d-inline-block" style="border-radius: 15px; box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.229); padding: 10px 25px 15px 25px; font-family: 'Michroma', sans-serif; margin-bottom: 10px; font-weight: 700; text-transform: capitalize;"><span style="font-weight: 400;"><%= user.name%></span></h5></div>
                 <div class="row">
                     <div class="card-body col-sm-4 pe-3" style="display: flex; justify-content: start; gap: 10px; flex-wrap: wrap;">
                      
