--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -11,18 +11,18 @@
 
 <% if(product){%>
     <div class="container mainCont mb-5">
-        <h3 class="mb-3  text-center" style="font-family: 'Michroma', sans-serif;">Edit Product</h3>
+        <h3 class="mb-3 w-100 text-center" style="font-family: 'Michroma', sans-serif;">Edit Product</h3>
         
         <a href="/admin/deleteProductCompletely?id=<%=product._id%>" class="btn btn-danger ms-auto mb-3"  id="button" >Delete</a>
 
         <form action="/admin/editProduct?id=<%=product._id%>" class="needs-validation" method="POST" enctype="multipart/form-data">
             
-            <div class="form-group">
-                <div class="d-grid" style="grid-template-columns: repeat(2, 1fr); column-gap: 10px; row-gap: 10px;">
+            <div class="form-group w-100">
+                <div class="d-flex" style="flex-wrap: wrap; justify-content: space-around; column-gap: 10px; row-gap: 10px; place-items: center;">
                     <% product.images.forEach(image => { %>
-                        <div class="rounded" style="overflow: hidden; height: 140px; align-items: center; position: relative;">
-                            <img src="<%= image %>" class="rounded img-thumbnail" style="width: 200px; height: 140px; object-fit: cover;" alt="...">
-                            <input type="checkbox" class="form-check-input bg-danger" name="selectedImages" value="<%= image %>" style="position: absolute; top: 5px; left: 5px; width: 25px; height: 25px;" id="flexCheckIndeterminate" onclick="confirmDelete(this)">
+                        <div class="rounded" style="overflow: hidden; height: 250px; align-items: center; position: relative;">
+                            <img src="<%= image %>" class=" img-thumbnail" style="width: 270px; height: 250px; object-fit: cover; border-radius: 15px;" alt="...">
+                            <input type="checkbox" class="form-check-input" name="selectedImages" value="<%= image %>" style="position: absolute; top: 10px; left: 10px; background-color: rgb(201, 30, 30); width: 40px; height: 40px; border-radius: 50%;" id="flexCheckIndeterminate" onclick="confirmDelete(this)">
                         </div>
                     <% }) %>
                     
@@ -38,37 +38,38 @@
                     </script>
                     
                 </div>
-                <label for="images">Images:</label> <br>
-                <small>Max 4 Images!</small> <br>
-                <input class="inputFieldImage" type="file" class="form-control-file" id="images" name="images" accept="image/*" multiple >
+                <div class="input-group mt-3">
+                    <span class="input-group-text" style="height: auto !important;">Images:(4)</span>
+                    <input class="inputFieldImage form-control inputSelect" type="file" class="form-control-file" id="images" name="images" accept="image/*" multiple >
+                </div>
             </div>
             
 
-            <div class="form-group">
-                <label for="name">Product Name:</label> <br>
-                <input class="inputField" type="text" class="form-control" id="name" name="name" value="<%=product.name%>" required>
+            <div class="input-group">
+                <span class="input-group-text">Name:</span>
+                <input class="inputField form-control" type="text" class="form-control" id="name" name="name" value="<%=product.name%>" required>
             </div>
 
-            <div class="form-group">
-                <label for="price">Price:</label> <br>
-                <input class="inputField" type="number" class="form-control" id="price" name="price" value="<%=product.price%>"  required>
+            <div class="input-group">
+                <span class="input-group-text">Price:</span>
+                <input class="inputField form-control" type="number" class="form-control" id="price" name="price" value="<%=product.price%>"  required>
             </div>
-            <div class="form-group">
-                <label for="price">Discount % :</label> <br>
-                <input class="inputField" type="number" class="form-control" id="discountPercentage" name="discountPercentage" value="<%=product.discountPercentage-(discountPercentage||0)%>"  required>
+            <div class="input-group">
+                <span class="input-group-text">Discount % :</span>
+                <input class="inputField form-control" type="number" class="form-control" id="discountPercentage" name="discountPercentage" value="<%=product.discountPercentage-(discountPercentage||0)%>"  required>
             </div>
             <script>
                 const id="<%=product._id%>";
             </script>
 
-            <div class="form-group">
-                <label for="quantity">Quantity:</label> <br>
-                <input class="inputField" type="number" class="form-control" id="quantity" name="quantity" value="<%=product.quantity%>"  required>
+            <div class="input-group">
+                <span class="input-group-text">Quantity:</span>
+                <input class="inputField form-control" type="number" class="form-control" id="quantity" name="quantity" value="<%=product.quantity%>"  required>
             </div>
 
-            <div class="form-group">
-                <label for="brand">Brand:</label> <br>
-                <select class="form-control" id="brand" name="brand" required>
+            <div class="input-group">
+                <span class="input-group-text">Brand:</span>
+                <select class="form-control inputSelect" id="brand" name="brand" required>
                     <option value="<%=product.brand%>"><%= product.brand.charAt(0).toUpperCase() + product.brand.slice(1) %></option>
                     <option value="nike">Nike</option>
                     <option value="reebok">Reebok</option>
@@ -80,22 +81,22 @@
                 </select>
             </div>
 
-            <div class="form-group">
-                <label for="category">Category:</label> <br>
-                <select class="form-control" id="category" name="category" required>
+            <div class="input-group">
+                <span class="input-group-text">Category:</span>
+                <select class="form-control inputSelect" id="category" name="category" required>
                     <option value="<%=product.category?._id%>"><%=product.category?.name%></option>
                     <% categories.forEach (category=>{%>
                         <option value="<%= category?._id%>"><%= category?.name%></option>
                     <%}) %>
                 </select>
             </div>
-            <div class="form-group">
+            <div class="form-control ">
                 <label for="description">Description:</label> <br>
                 <textarea class="form-control" id="description" name="description" rows="4" required><%=product.description%></textarea>
             </div>
 
 
-            <div class="form-group mb-5">
+            <div class="form-control  ">
                 <label for="sizes">Available Sizes:</label> <br>
                 <div class="d-flex" style="justify-content: center;">
                     <% const selectedSizes = product?.sizes %>
@@ -108,7 +109,7 @@
                 </div>
             </div>
             
-            <div class="submitButton">
+            <div class="submitButton mb-3">
             <button type="submit" class="btn btn-danger rounded-pill">Update Product</button></div>
         </form>
     </div>
@@ -242,9 +243,12 @@
                     }
     
                     try {
-                        const response = await fetch(`/admin/checkDiscount?discount=${numericDiscountPercentage}&id=${id}&category=${categoryValue}`);
+                        const response = await fetch(`/admin/checkDiscount?discount=${numericDiscountPercentage}&id=${id}&category=${categoryValue}&name=${nameValue}`);
                         const data = await response.json();
-                        if (data.discount === "true") {
+                        if(data.name==='exist'){
+                            showAlert("Product Already Exist.!")
+                        }
+                        else if (data.discount === "true") {
                             event.target.submit()
                         } else if (data.discount==="false"){
                             showAlert("Total Discount is More than 80 Max("+data.select+")");
