--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -1,42 +1,44 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/adminHome.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/card.css">
 
 </head>
 <body>
     <%- include('../layout/adminHeader')-%>
-
-        <div class="container" style="margin-top: 20px; margin-bottom: 50px;"> 
-<div class="container-fluid adminContainer">
-            <div class="row g-5"> 
-                <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
-                    <button class="btn btn-dark rounded">Total Item : <%=products.length%></button>
-                    <button class="btn btn-dark rounded mt-2">Total Quantity : <%= products.reduce((total, product) => total + product.quantity, 0) %></button>
-                </div>
-                <div class="adminRight col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
-                    <a href="/admin/addProduct" style="min-width: 180px;">
-                        <button class="btn btn-dark rounded">Add Item</button>
-                    </a>
-                    <a href="/admin/createCategory" style="min-width: 180px;">
-                        <button class="btn btn-dark rounded mt-2">Categories</button>
-                    </a>
-                </div>
+    <div class="container" style="margin-top: 20px; margin-bottom: 50px;"> 
+        <h2 class="text-start" style="font-family: 'Michroma', sans-serif;">Products</h2>
+<div class="container adminContainer">
+    <div class="d-flex justify-content-center mt-2">
+        <form action="/admin/searchProductList" method="get" class="w-50 mt-2 mb-3 needs-validation" enctype="application/form-data" style="box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.515); border-radius: 6px;">
+            <div class="input-group">
+                <span class="input-group-text bg-secondary" style="border: none;"><a href="/admin/productList" class="btn"><i class="fa-solid fa-broom" disable></i></a></span>
+                <input type="text" class="form-control" name="search" placeholder="Search Product" value="<%= search ? search : '' %>">
+                <button class="btn btn-secondary px-4 text-dark" type="submit">
+                    <i class="fa-solid fa-magnifying-glass" style="font-weight: 700;"></i>
+                </button>
             </div>
-        </div>
+        </form>
+    </div>
+            <div class=" g-5 adminCenter"> 
+                    <div>
+                        <button class="btn btn-dark rounded">Total Quantity : <%= products.reduce((total, product) => total + product.quantity, 0) %></button>
+                    </div>
+                    <div>
+                        <button class="btn btn-dark rounded">Total Item : <%=products.length%></button>
+                    </div>
+                    <div>
+                        <a href="/admin/createCategory">
+                            <button class="btn btn-dark rounded ">Categories</button>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="/admin/addProduct">
+                            <button class="btn btn-dark rounded">Add Item</button>
+                        </a>
+                    </div>
+            </div>
+</div>
       <div class="container mt-1 p-4" style="background-color: #e9ddf300 !important;  border: 1px solid rgba(166, 166, 166, 0); border-radius: 30px;  padding: 20px;">
-            <h2 class="text-center" style="font-family: 'Michroma', sans-serif;">Products</h2>
-            <div class="d-flex justify-content-center mt-2">
-                <form action="/admin/searchProductList" method="get" class="w-50 mt-2 mb-3 needs-validation" enctype="application/form-data">
-                    <div class="input-group mt-3">
-                        <input type="text" class="form-control" name="search" placeholder="Search Product" value="<%= search ? search : '' %>">
-                        <button class="btn btn-dark" type="submit"><i class="bi bi-search"></i></button>
-                    </div>
-                    <div class="d-flex justify-content-end mt-2">
-                        <a href="/admin/productList" class="btn btn-warning rounded-pill px-3"><i class="fa-solid fa-broom"></i></a>
-                    </div>
-                </form>
-            </div>
-            
-
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
               <% if (products=='') { %>
                 <h2 class="text-center">No Such Products</h2>
@@ -46,11 +48,11 @@
      
               <% products.forEach(product=>{%>
    
-                <div class="card w-100 p-0" style="height: auto; font-family: 'Michroma', sans-serif; border: 1px solid rgb(177, 177, 177); border-radius: 20px; box-shadow: 0px 0px 10px rgb(202, 202, 202); color: rgb(0, 0, 0);"> 
+                <div class="card w-100 p-0" style="height: auto; font-family: 'Michroma', sans-serif;"> 
                     <div class="row g-0 align-items-center">
                         <div class="col-lg-2 " >
                             <a href="/admin/productDetailed?id=<%=product._id%>">
-                              <img src="<%= product.images[0] %>" class="img-fluid " alt="Product Image" style="border-radius: 20px; margin-left: 2px;">
+                              <img src="<%= product.images[0] %>" class="img-fluid " alt="Product Image" style="border-radius: 30px; margin-left: 2px;">
                             </a>
                         </div>
                         <div class="col-lg-10 px-2" style="display: flex; flex-direction: column;">
