--- a/views/chat/chat.ejs
+++ b/views/chat/chat.ejs
@@ -10,13 +10,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <link rel="stylesheet" href="../../public/css/chatBot.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" integrity="sha512-KOWhIs2d8WrPgR4lTaFgxI35LLOp5PRki/DxQvb7mlP29YZ5iJ5v8tiLWF7JLk5nDBlgPP1gHzw96cZ77oD7zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script> -->
 </head>
 <body>
   <%- include('../layout/header')-%>
-  <h3 class="text-center" style="margin-top: 20px;  font-family: 'Michroma', sans-serif;">Message To Rare Kick's</h3>
-<div class="container mainFlex mb-5">
+  
+<div class="container mainFlex mb-5 mt-5">
     <div class="container p-3 mainCont">
+      <h3 class="text-center" style="font-family: 'Michroma', sans-serif;">Help Center!</h3>
         <div class="messageCont" id="messageCont">
                 <ul id="messages">
                   <%if(locals?.chats.length>0){%>
