--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -8,14 +8,13 @@
     <%- include('../layout/header') %>
 
 <div class="container productCont productContAll">
-
-    <div class="btn-group dropdown filterDropdown">
-        <button type="button" class="btn btn-dark rounded-pill dropdown-toggle px-3 py-2 filterDropDownButton" data-bs-toggle="dropdown" aria-expanded="false" >
-            <i class="fa-solid fa-filter me-3 " style="font-size: 20px;"></i>Filter
-        </button>
-        <ul class="dropdown-menu bg-dark text-center p-4 filterDropdownUl">
-            <li class="dropdown  ps-3 pe-3">
-                <div class="btn-group dropend">
+    <div class="container  filterDropdown">
+        <ul class="p-4 filterDropdownUl">
+            <h3 class="text-center text-light mt-2 mb-3 mainFontFamily w-100">
+                <%= locals.brand ? brand : name ? name : 'All Products' %>
+              </h3>
+            <li class="dropdown">
+                <div class="btn-group dropdown">
                     <button class="btn btn-dark dropdown-toggle px-3 py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         CATEGORIES
                     </button>
@@ -29,7 +28,9 @@
                         <% } %>
                     </ul>
                 </div>
-                <div class="btn-group dropend">
+            </li>
+            <li class="dropdown">
+                <div class="btn-group dropdown">
                     <button class="btn btn-dark dropdown-toggle px-3 py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         BRANDS
                     </button>
@@ -43,7 +44,9 @@
                         <li class="text-center hover  ps-3 pe-3"><a href="/user/brand?brand=converse">CONVERSE</a></li>
                     </ul>
                 </div>
-                <div class="btn-group dropend">
+            </li>
+            <li class="dropdown">
+                <div class="btn-group dropdown">
                     <button class="btn btn-dark dropdown-toggle px-3 py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         PRICE
                     </button>
@@ -78,16 +81,14 @@
     </div>
     
 
-    <h2 class="text-center mt-2 mb-3 mainFontFamily">
-        <%= locals.brand ? brand : name ? name : 'All Products' %>
-      </h2>
+
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 d-flex mb-5" style="justify-content: center;">
         <% if (products && products.length > 0) { %>
             <% products.forEach(product => { %>
                 <div class="col">
                     <div class="card h-100">
                         <a href="/user/productDetailed?id=<%= product._id %>" style="color: black;">
-                            <img src="<%= product.images[0]%>" class="card-img-top" alt="..." style="position: relative;">
+                            <img src="<%= product.images[0]%>" class="card-img-top productImageMain" alt="..." style="position: relative;">
                         <%if(product?.discountPercentage>0){%>
                             <span class="text-white cardText"><%=product.discountPercentage%>% off</span>
                             <%}%>
