--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -1,6 +1,7 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/detailedProduct.css">
 <style>
     .card {
     position: relative;
@@ -102,16 +103,16 @@
                     <% if (product?.images && product?.images.length === 1) { %>
                         <div class="col-12">
                             <div class="card position-relative">
-                                <img src="<%= product.images[0] %>" class="card-img-top" alt="..." style="width: 100%; height: auto;">
+                                <img src="<%= product.images[0] %>" class="card-img-top productImageMain" alt="..." style="width: 100%; height: auto;">
                             </div>
                         </div>
                         
                     <% } else { %>
                         <% product?.images?.forEach((image, index) => { %>
                             <div class="col-xl-6 col-lg-6 col-12">
-                                <div class="card">
+                                <div class="card" data-toggle="modal" data-target="#imageModal<%= index %>">
                                     <!-- Add data-toggle and data-target attributes to the img element -->
-                                    <img src="<%= image %>" class="card-img-top" alt="..." data-toggle="modal" data-target="#imageModal<%= index %>">
+                                    <img src="<%= image %>" class="card-img-top productImageMain" alt="..." >
                                     <div class="overlay">
                                         <i class="fa-solid fa-eye"></i>
                                     </div>
@@ -138,7 +139,8 @@
                     <% } %>
             </div>
         </div>
-            <div class="col-12 col-xl-5 col-lg-12 pt-3 pb-2 ps-4 pe-2 " style="background-color: #D9D9D9; border-radius: 20px;" >
+            <div class="col-12 col-xl-5 col-lg-12 pt-3 pb-2 ps-4 pe-2 " style="background-color: #f6f6f6; border-radius: 20px; box-shadow: 
+            0px 0px 5px rgba(0, 0, 0, 0.349);" >
                 <h3 class="card-title  mt-2 text-center" style=" font-family: 'Michroma', sans-serif;"><u><%= product?.name%></u></h3>
                 
                 <div class="d-flex align-item-center mt-5">
@@ -202,14 +204,20 @@
                     <a href="" id="<%=product?._id%>" class="addToCart btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Add To Cart</h3></a>
 
                 <%} %>
-
-
-                <h3 class="mt-3" style="font-family: 'Michroma', sans-serif; "><u>About Product</u></h3>
-                <p class="" style="font-family: 'Michroma', sans-serif; font-size: 16px;" ><%=product?.description%></p>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Category : </span><%=product?.category?.name%></p>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Brand : </span><%=product?.brand%></p>
+                <h3 class="mt-3" style="font-family: 'Michroma', sans-serif; ">About Product : </h3>
+                <p class="descriptionCont" id="descriptionCont" style="font-family: 'Michroma', sans-serif; font-size: 16px;">
+                    <%=product?.description%>
+                </p>
             </div>
             <script>
+                            const descriptionCont = document.getElementById('descriptionCont');
+
+                            descriptionCont.addEventListener('click', () => {
+                                descriptionCont.style.whiteSpace = descriptionCont.style.whiteSpace === 'normal' ? 'nowrap' : 'normal';
+                            });
+
                         const addToWishlist = document.getElementById('addToWishlist');
                         const wishCount = document.getElementById('wishCount');
 
@@ -282,7 +290,7 @@ products?.forEach(productA => {
 <div class="col">
     <div class="card h-100">
         <a href="/user/productDetailed?id=<%=productA._id%>" style="text-decoration: none; color: black;">
-        <img src="<%= productA.images[0]%>" class="card-img-top" alt="..." style="position: relative;">
+        <img src="<%= productA.images[0]%>" class="card-img-top productImageMain" alt="..." style="position: relative;">
         <%if(productA?.discountPercentage>0){%>
             <span class="text-white" style="position: absolute; top: 10px; right: 10px; font-size: 15px; background-color:#CC0C39!important; border-radius: 10px; font-weight: bold; padding:8px ;"><%=productA.discountPercentage%>% off</span>
             <%}%>
@@ -416,29 +424,47 @@ products?.forEach(productA => {
                 <div class="modal-body">
                     <!-- Review Form -->
                     <form id="reviewForm">
-                        <div class="form-group">
-                            <label for="userReviewRating">Your Review Rating:</label>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating1" value="1" required>
-                                <label class="form-check-label" for="1">1 (Poor)</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating2" value="2" required>
-                                <label class="form-check-label" for="2">2 (Fair)</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating3" value="3" required>
-                                <label class="form-check-label" for="3">3 (Average)</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating4" value="4" required>
-                                <label class="form-check-label" for="4">4 (Good)</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="userReviewRating" id="rating5" value="5" required>
-                                <label class="form-check-label" for="5">5 (Excellent)</label>
-                            </div>
-                        </div>
+                        <style>
+                            .rating {
+                            display: inline-block;
+                            }
+
+                            .rating input {
+                            display: none;
+                            }
+
+                            .rating label {
+                            float: right;
+                            cursor: pointer;
+                            color: #ccc;
+                            transition: color 0.3s;
+                            }
+
+                            .rating label:before {
+                            content: '\2605';
+                            font-size: 30px;
+                            }
+
+                            .rating input:checked ~ label,
+                            .rating label:hover,
+                            .rating label:hover ~ label {
+                            color: #6f00ff;
+                            transition: color 0.3s;
+                            }
+
+                        </style>
+                        <div class="form-group rating">
+                            <input value="5" name="userReviewRating" id="star5" type="radio">
+                            <label for="star5"></label>
+                            <input value="4" name="userReviewRating" id="star4" type="radio">
+                            <label for="star4"></label>
+                            <input value="3" name="userReviewRating" id="star3" type="radio">
+                            <label for="star3"></label>
+                            <input value="2" name="userReviewRating" id="star2" type="radio">
+                            <label for="star2"></label>
+                            <input value="1" name="userReviewRating" id="star1" type="radio">
+                            <label for="star1"></label>
+                          </div>
                         <div class="form-group">
                             <label for="userReview">Your Review:</label>
                             <textarea class="form-control" id="userReview" rows="3" required></textarea>
@@ -458,13 +484,17 @@ products?.forEach(productA => {
 <script>
 document.getElementById('reviewForm').addEventListener('submit', function (event) {
     event.preventDefault();
-
+    const rating= document.querySelector('input[name="userReviewRating"]:checked');
+    if(!rating){
+        showAlert("Select A Rating")
+        return 
+    }
     const formData = {
         rating: document.querySelector('input[name="userReviewRating"]:checked').value,
         review: document.getElementById('userReview').value,
         productId:"<%=product._id%>"
     };
-
+    
     fetch('/user/addReview', {
         method: 'POST',
         headers: {
@@ -475,6 +505,7 @@ document.getElementById('reviewForm').addEventListener('submit', function (event
     .then(response => response.json())
     .then(data => {
         if(data.added==="notABuyer"){
+            console.log(formData)
             showAlert("You Are Not A Buyer To Add Review!")
         }
         else if(data.added===true){
