--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,6 @@
 .header{
     position: sticky;
-    background: linear-gradient(#2b2e2f,#414345) ;
+    background: linear-gradient(#212324,#2d2f31) ;
     border-top: 0.7px solid black;
     /* border-bottom-left-radius:30px ;
     border-bottom-right-radius:30px ; */
