--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -2,35 +2,134 @@
 <link rel="stylesheet" type="text/css" href="../../public/css/footer.css">
 </head>
 <body>
-    <div class="footer fixed-bottom mt-4">
-        <div class="footerBlur">
-            <div class="footer2">
-                <div class="footerTxt">
-                    <h3>Our Story</h3>
-                    <p>
-                        Rare Kicks was born out of a shared love for sneakers and a desire to offer something special to fellow sneakerheads. We understand that your footwear isn't just an accessory; it's an expression of your personality and a statement of your style. That's why we've made it our mission to hunt down the rarest shoes.
-                    </p>
+    <footer class="footer-section" style="margin-top: 4rem;">
+        <div class="container">
+            <div class="footer-cta pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="cta-text">
+                                <h4>Find us</h4>
+                                <span>1010 Avenue, sw 54321, Pathanamthitta</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-phone"></i>
+                            <div class="cta-text">
+                                <h4>Call us</h4>
+                                <span>987654321**</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="far fa-envelope-open"></i>
+                            <div class="cta-text">
+                                <h4>Mail us</h4>
+                                <span>rarekicks0@gmail.com</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="footerTxt">
-                    <h3>INFO</h3>
-                    <ul>
-                        <li>Contact Us</li>
-                        <li>Releases</li>
-                        <li>Stores</li>
-                        <li>Brands</li>
-                        <li>Blogs</li>
-                    </ul>
-                </div>
-                <div class="footerTxt">
-                    <h3>About Us!</h3>
-                    <p>
-                        Welcome to Rare Kicks – Where Style Meets Uniqueness! At Rare Kicks, we're more than just a shoe brand; we're a lifestyle. Founded with a passion for sneakers and a commitment to individuality, we bring you a curated collection of the most exclusive and unique kicks in the sneaker world.
-                    </p>
+            </div>
+            <div class="footer-content pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-logo">
+                                <a href="/user/home"><img src="../../public/images/kn (1).png" class="img-fluid" alt="logo"></a>
+                            </div>
+                            <div class="footer-text">
+                                <p>Rare Kicks was born out of a shared love for sneakers and a desire to offer something special to fellow sneakerheads. We understand that your footwear isn't just an accessory; it's an expression of your personality and a statement of your style. That's why we've made it our mission to hunt down the rarest shoes.</p>
+                            </div>
+                            <div class="footer-social-icon">
+                                <span>Follow us</span>
+                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Useful Links</h3>
+                            </div>
+                            <ul>
+                                <li><a href="/user/home">Home</a></li>
+                                <li><a href="https://ajmal-j.github.io/Personal/index.html">portfolio</a></li>
+                                <li><a href="/user/profile">Profile</a></li>
+                                <li><a href="/chatBot/chat">Chat</a></li>
+                                <li><a href="/user/cart">Cart</a></li>
+                                <li><a href="/user/wishlist">Wishlist</a></li>
+                                <li><a href="/user/orders">Orders</a></li>
+                                <li><a href="/user/allProducts">All Products</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Hei There!</h3>
+                            </div>
+                            <div class="footer-text mb-25">
+                                <p>Mail us, we bring you a curated collection of the most exclusive and unique kicks in the sneaker world, kindly fill the form below.</p>
+                            </div>
+                            <div class="subscribe-form">
+                                <div>
+                                    <input type="text" placeholder="Email Address">
+                                    <button><i class="fab fa-telegram-plane"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright &copy; 2018, All Right Reserved <a href="mailto:rarekicks0@gmail.com">rarekicks0@gmail.com</a></p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Terms</a></li>
+                                <li><a href="#">Privacy</a></li>
+                                <li><a href="#">Policy</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <%- include('./footerHTML')-%>
