--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,72 +1,162 @@
-.footer {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    z-index: 0;
-    background: linear-gradient(#2b2e2f,#414345) ;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.641);
-    border-top: 0.7px solid black;
-    /* border-top-left-radius:30px ;
-    border-top-right-radius:30px ; */
+ul {
+    margin: 0px;
+    padding: 0px;
+}
+.footer-section {
+  background: linear-gradient(#212324,#2d2f31) ;
+  position: relative;
+}
+.footer-cta {
+  border-bottom: 1px solid #373636;
+}
+.single-cta i {
+  color: #f5f5f5;
+  font-size: 30px;
+  float: left;
+  margin-top: 8px;
+}
+.cta-text {
+  padding-left: 15px;
+  display: inline-block;
+}
+.cta-text h4 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 2px;
+}
+.cta-text span {
+  color: #757575;
+  font-size: 15px;
+}
+.footer-content {
+  position: relative;
+  z-index: 2;
+}
+.footer-pattern img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 330px;
+  background-size: cover;
+  background-position: 100% 100%;
+}
+.footer-logo {
+  margin-bottom: 30px;
+}
+.footer-logo img {
+    max-width: 200px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgb(218, 218, 218);
+}
+.footer-text p {
+  margin-bottom: 14px;
+  font-size: 14px;
+      color: #7e7e7e;
+  line-height: 28px;
+}
+.footer-social-icon span {
+  color: #ffffff;
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 20px;
+}
+.footer-social-icon a {
+  font-size: 16px;
+  margin-right: 15px;
+}
+.footer-social-icon i {
     color: white;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
 }
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0; 
-    z-index: 0;
-
+.facebook-bg{
+  background: #3B5998;
 }
-
-.main-content {
-    flex: 1;
+.twitter-bg{
+  background: #55ACEE;
 }
-
-.footer {
-    margin-top: auto !important; 
+.google-bg{
+  background: #c00808;
 }
-
-.footerBlur {
-    width: 100%;
+.footer-widget-heading h3 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  position: relative;
 }
-
-.footer2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.footer-widget-heading h3::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  height: 2px;
+  width: 50px;
+  background: #ffffff;
 }
-
-.footerTxt {
-    flex: 1;
-    padding: 20px;
-    text-align: center;
-    max-width: 400px;
+.footer-widget ul li {
+  display: inline-block;
+  float: left;
+  width: 50%;
+  margin-bottom: 12px;
 }
-
-.footerTxt h3 {
-    font-family: 'Michroma', sans-serif;
+.footer-widget ul li a:hover{
+  color: #ffffff;
 }
-
-/* Media Queries for Responsive Design */
-@media only screen and (max-width: 768px) {
-    .footer2 {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footerTxt {
-        max-width: 100%;
-    }
+.footer-widget ul li a {
+  color: #878787;
+  text-transform: capitalize;
 }
-
-.footer ul {
-    margin-left: -30px;
-    list-style-type: none;
+.subscribe-form {
+  position: relative;
+  overflow: hidden;
 }
-* ul{
-    list-style-type: none;
+.subscribe-form input {
+  width: 100%;
+  padding: 14px 28px;
+  background: #2E2E2E;
+  border: 1px solid #2E2E2E;
+  color: #fff;
+}
+.subscribe-form button {
+    position: absolute;
+    right: 0;
+    background: #6f6f6f;
+    padding: 13px 20px;
+    top: 0;
+    border: none;
+}
+.subscribe-form button i {
+  color: #dd3131;
+  font-size: 22px;
+  transform: rotate(-6deg);
+}
+.copyright-area{
+  background: #202020;
+  padding: 25px 0;
+}
+.copyright-text p {
+  margin: 0;
+  font-size: 14px;
+  color: #878787;
+}
+.copyright-text p a{
+  color: #ffffff;
+}
+.footer-menu li {
+  display: inline-block;
+  margin-left: 20px;
+}
+.footer-menu li:hover a{
+  color: #fffefd;
+}
+.footer-menu li a {
+  font-size: 14px;
+  color: #878787;
 }
