--- a/views/user/404.ejs
+++ b/views/user/404.ejs
@@ -8,6 +8,12 @@
         =======================*/
         *{
             font-family: 'Michroma', sans-serif;
+           
+        }
+        .body{
+            height: 100vh;
+            display: flex;
+            align-items: center;
         }
         .page_404 {
             height: 100vh;
@@ -48,8 +54,8 @@
     </style>
 </head>
 <body>
-    <div class="container-fluid ">
-        <section class="page_404">
+    <div class="container-fluid">
+        <section class="page_404 body">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-10 text-center">
