--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -82,7 +82,7 @@
     
 
 
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 d-flex mb-5" style="justify-content: center;">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 d-flex mb-5 mt-4" style="justify-content: center;">
         <% if (products && products.length > 0) { %>
             <% products.forEach(product => { %>
                 <div class="col">
