--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -114,20 +114,20 @@
         <div class="row mt-4 ">
             <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center">
                 <div style=" padding: 30px; ">
-                    <i class="bi bi-person-circle display-1"></i>
+                    <i class="bi bi-person-check display-1"></i>
                 </div>
             </div>
             <div class="mt-2 col-12 col-sm-9 d-flex" style="flex-direction: column; row-gap: 20px; font-family: 'Michroma', sans-serif;">
                 <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
-                    <span class="btn btn-dark rounded" style="flex: 0 0 60px; min-width: 180px;"><h6>NAME </h6></span>
+                    <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-solid fa-signature"></i> </h6></span>
                     <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.name%></span>
                 </div>
                 <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
-                    <span class="btn btn-dark rounded" style="flex: 0 0 60px; min-width: 180px;"><h6>EMAIL </h6></span>
+                    <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-regular fa-envelope"></i> </h6></span>
                     <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.email%></span>
                 </div>
                 <div class="d-flex" style="align-items: center; flex-wrap: wrap;">
-                    <span class="btn btn-dark rounded" style="flex: 0 0 60px; min-width: 180px;"><h6>CONTACT</h6></span>
+                    <span class="btn btn-dark rounded" style="flex: 0 0 50px;"><h6><i class="fa-solid fa-phone"></i></h6></span>
                     <span style="flex: 1; text-align: start; margin-left: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><%=user.contact%></span>
                 </div>
             </div>
@@ -201,6 +201,9 @@
                             <button class="btn btn-outline-secondary" type="button" id="copyButton" onclick="copyReferralLink()"><i class="fa-regular fa-copy"></i></button>
                         </div>
                     </div>
+                </div>
+                <div class="text-end mt-2 mb-3 me-2">
+                    <b>Total Earnings : </b> &#x20B9; <%=((user.referralsApplied)*500)%>
                 </div>
           </div>
     <%}%>
